# Candle

./: !!  .gitattributes  .gitignore  CMakeLists.txt  Custom.cmake  README.md  TODO.md  readme.md
.github/workflows/: build_cmake.yml  cmake-multi-platform.yml  cmake-multi-platform.yml_old
build_commands/: 0_load_qt.bash
build_scripts/: 0_setup_qt.cmake  3_run.cmake  build_set_builddir.cmake
doc/: help_ru.html  help_ru.md
packaging/: CMakeLists.txt
scripts/: CMakeLists.txt  CPpack.cmake  build_ext_binary.cmake  build_icns.cmake  build_icons.cmake  collect_deps.cmake  get_file_deps.cmake
src/: customwidgetsshared.h
src/candle/: CMakeLists.txt  bootstrap.cpp  bootstrap.h  customkeysequenceedit.h  frmabout.cpp  frmabout.h  frmabout.ui  frmmain.cpp  frmmain.h  frmmain.ui  frmsettings.cpp  frmsettings.h  frmsettings.ui  main.cpp  scriptfunctions.cpp  scriptfunctions.h  scriptvars.cpp  scriptvars.h  shortcutdelegate.h
src/candle/drawers/: gcodedrawer.cpp  gcodedrawer.h  heightmapborderdrawer.cpp  heightmapborderdrawer.h  heightmapgriddrawer.cpp  heightmapgriddrawer.h  heightmapinterpolationdrawer.cpp  heightmapinterpolationdrawer.h  machineboundsdrawer.cpp  machineboundsdrawer.h  origindrawer.cpp  origindrawer.h  selectiondrawer.cpp  selectiondrawer.h  shaderdrawable.cpp  shaderdrawable.h  tooldrawer.cpp  tooldrawer.h
src/candle/parser/: arcproperties.cpp  arcproperties.h  gcodeparser.cpp  gcodeparser.h  gcodepreprocessorutils.cpp  gcodepreprocessorutils.h  gcodeviewparse.cpp  gcodeviewparse.h  linesegment.cpp  linesegment.h  pointsegment.cpp  pointsegment.h
src/candle/shaders/: vshader.glsl
src/candle/tables/: gcodetablemodel.cpp  gcodetablemodel.h  heightmaptablemodel.cpp  heightmaptablemodel.h
src/candle/translations/: candle_en.ts  candle_es.ts  candle_fr.ts  candle_pt.ts  candle_ru.ts
src/candle/utils/: interpolation.h  util.h
src/candle/widgets/: combobox.cpp  combobox.h  comboboxkey.h  dropwidget.cpp  dropwidget.h  glwidget.cpp  glwidget.h  widgetmimedata.cpp  widgetmimedata.h
src/candleplugins/: CMakeLists.txt
src/candleplugins/camera/: camera_en.ts  camera_es.ts  camera_fr.ts  camera_pt.ts  camera_ru.ts  config.ini  script.js  settings.ui  widget.ui
src/candleplugins/coordinatesystem/: config.ini  coordinatesystem_en.ts  coordinatesystem_es.ts  coordinatesystem_fr.ts  coordinatesystem_pt.ts  coordinatesystem_ru.ts  script.js  widget.ui
src/candleplugins/emergencybutton/: config.ini  emergencybutton_en.ts  emergencybutton_es.ts  emergencybutton_fr.ts  emergencybutton_pt.ts  emergencybutton_ru.ts  script.js  settings.ui  widget.ui
src/candleplugins/usercommands/: config.ini  script.js  settings.ini  settings.ui  usercommands_en.ts  usercommands_es.ts  usercommands_fr.ts  usercommands_pt.ts  usercommands_ru.ts  widget.ui
src/designerplugins/cameraplugin/: CMakeLists.txt  cameraplugin.cpp  cameraplugin.h  camerawidget.cpp  camerawidget.h
src/designerplugins/customwidgetsplugin/: CMakeLists.txt  colorpicker.cpp  colorpicker.h  colorpickerplugin.cpp  colorpickerplugin.h  customwidgetsplugin.cpp  customwidgetsplugin.h  slider.cpp  slider.h  sliderbox.cpp  sliderbox.h  sliderbox.ui  sliderboxplugin.cpp  sliderboxplugin.h  sliderplugin.cpp  sliderplugin.h  styledtoolbutton.cpp  styledtoolbutton.h  styledtoolbuttonplugin.cpp  styledtoolbuttonplugin.h
src/scriptbindings/: CMakeLists.txt  funcs_QLayoutItem.h  wrapper_CameraWidget.h  wrapper_ColorPicker.h  wrapper_Delegate.h  wrapper_QAbstractButton.h  wrapper_QAbstractItemDelegate.h  wrapper_QAbstractItemView.h  wrapper_QAbstractSpinBox.h  wrapper_QAction.h  wrapper_QBoxLayout.h  wrapper_QColor.h  wrapper_QComboBox.h  wrapper_QDir.h  wrapper_QFile.h  wrapper_QGridLayout.h  wrapper_QHeaderView.h  wrapper_QIODevice.h  wrapper_QIcon.h  wrapper_QLayout.cpp  wrapper_QLayout.h  wrapper_QLayoutItem.cpp  wrapper_QLayoutItem.h  wrapper_QLineEdit.h  wrapper_QModelIndex.cpp  wrapper_QModelIndex.h  wrapper_QObject.cpp  wrapper_QObject.h  wrapper_QPainter.cpp  wrapper_QPainter.h  wrapper_QPoint.h  wrapper_QPointF.h  wrapper_QPushButton.h  wrapper_QRect.h  wrapper_QRectF.h  wrapper_QSettings.cpp  wrapper_QSettings.h  wrapper_QSize.h  wrapper_QSizePolicy.h  wrapper_QSlider.h  (+17 more)
